--- a/src/bipquantum_frontend/src/index.scss
+++ b/src/bipquantum_frontend/src/index.scss
@@ -2,9 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  background-color: white !important;
+}
+
 body {
   font-family: sans-serif;
   font-size: 1.5rem;
+  background-color: white !important;
 }
 
 img {
