--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+@font-face {
+  font-family: 'MomentumExtended';
+  src: url('/fonts/extend-regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'MomentumExtended';
+  src: url('/fonts/extend-extrabold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,7 +34,6 @@ h2 {
 }
 
 body {
-  font-family: sans-serif;
   font-size: 1.2rem;
 }
 
@@ -80,7 +95,7 @@ input {
   overflow: hidden;
   padding: 8px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
-  font-family: "Inter", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Header (Selected Date) */
@@ -181,3 +196,23 @@ input {
   color: #ffffff; /* White for dark mode */
   opacity: 1;
 }
+
+/* Concave Effect for Active Link */
+.nav-active-bg {
+  position: absolute;
+  width: 90%;
+  height: 100%;
+  background: linear-gradient(to top, #4372DB, #549BF6);
+  left: 0;
+  top: 0;
+  border-top-right-radius: 40px;
+  border-bottom-right-radius: 40px;
+  -webkit-mask-image: url('data:image/svg+xml,<svg width="75" height="120" viewBox="0 0 75 120" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M75 60C75 77.1208 61.1208 91 44 91C42.8491 91 41.7129 90.9373 40.5946 90.8151C25.076 89.1194 13 75.97 13 60C13 43.8253 25.3875 30.5439 41.193 29.1254C42.1176 29.0424 43.0538 29 44 29C61.1208 29 75 42.8792 75 60Z" fill="white"/><path d="M40.5946 90.8151C25.076 89.1194 13 75.97 13 60C13 43.8253 25.3875 30.5439 41.193 29.1254C27.9764 29.2761 4.18101 23.7993 -4 0V119.5C0.468487 109.446 15.4504 90.3148 40.5946 90.8151Z" fill="white"/></svg>');
+  mask-image: url('data:image/svg+xml,<svg width="75" height="120" viewBox="0 0 75 120" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M75 60C75 77.1208 61.1208 91 44 91C42.8491 91 41.7129 90.9373 40.5946 90.8151C25.076 89.1194 13 75.97 13 60C13 43.8253 25.3875 30.5439 41.193 29.1254C42.1176 29.0424 43.0538 29 44 29C61.1208 29 75 42.8792 75 60Z" fill="white"/><path d="M40.5946 90.8151C25.076 89.1194 13 75.97 13 60C13 43.8253 25.3875 30.5439 41.193 29.1254C27.9764 29.2761 4.18101 23.7993 -4 0V119.5C0.468487 109.446 15.4504 90.3148 40.5946 90.8151Z" fill="white"/></svg>');
+  mask-size: cover;
+  mask-repeat: no-repeat;
+  z-index: -1;
+}
+
+
+
