--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 @font-face {
-  font-family: 'MonumentExtended';
-  src: url('/fonts/extend-regular.ttf') format('truetype');
+  font-family: "MonumentExtended";
+  src: url("/fonts/extend-regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'MonumentExtended';
-  src: url('/fonts/extend-extrabold.ttf') format('truetype');
+  font-family: "MonumentExtended";
+  src: url("/fonts/extend-extrabold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
@@ -23,14 +23,19 @@
   --vh: 100vh;
 }
 @media (max-width: 640px) {
-  html, body {
+  html,
+  body {
     height: 100%;
     min-height: 100%;
+    overscroll-behavior: none;
+    overflow-x: hidden;
   }
 }
 
 /* Custom styles for Markdown headings */
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: bold;
   margin: 0.5em 0;
 }
@@ -46,6 +51,7 @@ h2 {
 
 body {
   font-size: 1.2rem;
+  overscroll-behavior: none;
 }
 
 input {
@@ -102,7 +108,7 @@ input {
   position: absolute;
   width: 90%;
   height: 100%;
-  background: linear-gradient(to top, #4372DB, #549BF6);
+  background: linear-gradient(to top, #4372db, #549bf6);
   left: 0;
   top: 0;
   border-top-right-radius: 40px;
@@ -113,8 +119,6 @@ input {
   mask-repeat: no-repeat;
   z-index: -1;
 }
-
-
 
 input[type="date"]::-webkit-calendar-picker-indicator {
   filter: invert(40%) sepia(100%) saturate(500%) hue-rotate(200deg);
@@ -219,7 +223,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   color: #448aff; /* OK */
 }
 
-
 /* Light Mode Placeholder */
 .react-datepicker__input-container input::placeholder {
   color: #000000; /* Black for light mode */
@@ -258,11 +261,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 ._container_1c03y_8 {
-  background-color: rgba(0, 0, 0, 0.0) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
 }
 
 ._dropdown_1c03y_15 {
-  background-color: rgba(0, 0, 0, 0.0) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
   height: 100% !important;
-  
 }
